IRtest_out/61_sort_test7.err
irs/61_sort_test7.ll:51:1: error: expected instruction opcode
next_entry51:
^
1 error generated.
